# AISprinkler

./: .env  .env.example  .env.test  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  aaaaa  pyproject.toml
config/: SPRINKLER_LLM_RULES.md  langchain.config.example.yaml  rules.policy.example.yaml  scheduler.config.example.yaml
config/seeds/: alabama_baseline_schedule.sql
docker/: Dockerfile  Dockerfile.test  docker-compose.yml
docker/grafana/dashboards/: aisprinkler_observability.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
docker/loki/: config.yml
docker/promtail/: config.yml
docs/: AI_AGENT_SPEC.md  ARCHITECTURE.md  ASSUMPTIONS.md  BASELINE_SCHEDULE_ALABAMA.md  CLEAN_ARCHITECTURE.md  DATABASE_SCHEMA.md  DESIGN_REVIEW_CHECKLIST.md  IMPLEMENTATION_READINESS.md  LANGCHAIN_CONFIG_SPEC.md  ORCHESTRATION.md  PROMPTS_AND_RULES.md  RISK_REGISTER.md  TRACEABILITY.md
docs/grafana/: dashboard_schedule_logs_snippet.json  queries.sql
scripts/: adjust_schedule_last30d.py  create_baseline_last30d.py  process_manual_reviews.py  retry_failed_run.py  trigger_daily_adjustment.py  weather_spanishfort.py
src/aisprinkler/api/: main.py
src/aisprinkler/api/routers/: runs.py  weather.py  (+1 more)
src/aisprinkler/infrastructure/: logging_config.py
tests/: conftest.py
tests/integration/: conftest.py  test_schedule_repository.py  test_schedule_routes.py  test_weather_routes.py
tests/unit/application/: test_run_daily_adjustment.py
tests/unit/domain/: test_entities.py  test_rule_engine.py
(+31 files in other folders)
